--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -60,13 +60,15 @@
                         android:layout_height="0dp"
                         android:layout_weight="48"
                         android:background="@drawable/box"
+                        android:inputType="text"
                         android:hint="아이디"
                         android:lines="1"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
                         android:text="normal001"
-                        android:textColor="#999999"
-                        android:textSize="@dimen/dimen_16"></EditText>
+                        android:textColor="#000000"
+                        android:textStyle="bold"
+                        android:textSize="@dimen/dimen_19"></EditText>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
@@ -85,8 +87,9 @@
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
                         android:text="test123!"
-                        android:textColor="#999999"
-                        android:textSize="@dimen/dimen_16"></EditText>
+                        android:textColor="#000000"
+                        android:textStyle="bold"
+                        android:textSize="@dimen/dimen_19"></EditText>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
