--- a/app/src/main/res/values-hdpi/dimens.xml
+++ b/app/src/main/res/values-hdpi/dimens.xml
@@ -25,6 +25,8 @@
 	<dimen name="dimen_9">6.00dp</dimen>
 	<dimen name="dimen_10">6.67dp</dimen>
 	<dimen name="dimen_11">7.33dp</dimen>
+	<dimen name="dimen_12">8.00dp</dimen>
+	<dimen name="dimen_13">8.66dp</dimen>
 	<dimen name="dimen_14">9.33dp</dimen>
 	<dimen name="dimen_15">10.05dp</dimen>
 	<dimen name="dimen_16">10.67dp</dimen>
