--- a/app/src/main/res/values-mdpi/dimens.xml
+++ b/app/src/main/res/values-mdpi/dimens.xml
@@ -26,6 +26,7 @@
 	<dimen name="dimen_10">12.50dp</dimen>
 	<dimen name="dimen_11">13.75dp</dimen>
 	<dimen name="dimen_12">15.00dp</dimen>
+	<dimen name="dimen_13">16.25dp</dimen>
 	<dimen name="dimen_14">17.50dp</dimen>
 	<dimen name="dimen_15">18.75dp</dimen>
 	<dimen name="dimen_16">20.00dp</dimen>
