--- a/app/src/main/res/layout/fragment_obtain_order.xml
+++ b/app/src/main/res/layout/fragment_obtain_order.xml
@@ -89,7 +89,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="20"
-                android:text="QR스캔 검색하기"/>
+                android:text="바코드 검색하기"/>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
