--- a/app/src/main/res/layout/fragment_obtain_order_list.xml
+++ b/app/src/main/res/layout/fragment_obtain_order_list.xml
@@ -17,7 +17,7 @@
             android:layout_height="0dp"
             android:paddingLeft="@dimen/dimen_16"
             android:paddingRight="@dimen/dimen_16"
-            android:layout_weight="216"
+            android:layout_weight="212"
             android:orientation="vertical">
             <View
                 android:layout_width="match_parent"
@@ -159,58 +159,8 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="24"/>
-                <!-- 체크박스
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="24"
-                    android:orientation="horizontal"
-                    android:gravity="center">
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:button="@drawable/checkbox_20"/>
-                    <TextView
-                        style="@style/CheckBoxText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="미처리 조회"
-                        android:layout_marginLeft="@dimen/dimen_8"
-                        android:layout_marginRight="@dimen/dimen_15"/>
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:button="@drawable/checkbox_20"/>
-                    <TextView
-                        style="@style/CheckBoxText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="완료 조회"
-                        android:layout_marginLeft="@dimen/dimen_8"
-                        android:layout_marginRight="@dimen/dimen_15"/>
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:button="@drawable/checkbox_20"/>
-                    <TextView
-                        style="@style/CheckBoxText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="업체주문내역"
-                        android:layout_marginLeft="@dimen/dimen_8"
-                        android:layout_marginRight="@dimen/dimen_15"/>
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:button="@drawable/checkbox_20"/>
-                    <TextView
-                        style="@style/CheckBoxText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="직접판매내역"
-                        android:layout_marginLeft="@dimen/dimen_8"/>
-                </LinearLayout>-->
+                    android:layout_weight="20"/>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
@@ -258,6 +208,20 @@
 
                     </RadioGroup>
 
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="4"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="24"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+
                     <RadioGroup
                         android:id="@+id/radioGroup2"
                         android:orientation="horizontal"
@@ -271,12 +235,20 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:checked="true"
-                            android:text=" 업체주문내역" />
+                            android:text=" 전체" />
 
                         <RadioButton
                             style="@style/CheckBoxText"
                             android:button="@drawable/checkbox_20"
                             android:id="@+id/radio5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=" 업체주문내역" />
+
+                        <RadioButton
+                            style="@style/CheckBoxText"
+                            android:button="@drawable/checkbox_20"
+                            android:id="@+id/radio6"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text=" 직접판매내역" />
@@ -287,7 +259,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="24"/>
+                    android:layout_weight="20"/>
                 <Button
                     android:id="@+id/btn_inquiry"
                     android:layout_width="wrap_content"
@@ -302,11 +274,31 @@
                     android:layout_weight="24"/>
             </LinearLayout>
 
+        </LinearLayout>
+        <!-- 상품주문 내역 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:paddingLeft="@dimen/dimen_16"
+            android:paddingRight="@dimen/dimen_16"
+            android:layout_weight="48"
+            android:orientation="vertical">
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="24"/>
+                android:layout_weight="13"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="22"
+                style="@style/Text_Black_14"
+                android:text="상품주문 내역"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="13"/>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -355,7 +347,7 @@
             android:id="@+id/rv_order_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="332"/>
+            android:layout_weight="336"/>
 
         <View
             android:layout_width="match_parent"
